crates/runtime-macros/src/v8_class/snapshots/zeroship_runtime_macros__v8_class__snapshot_tests__class_basic.snap
---
source: crates/runtime-macros/src/v8_class/snapshot_tests.rs
expression: format_expansion(out)
---
impl Foo {
    fn new(start: u32) -> Foo {
        Foo { value: start }
    }
    fn touch(&mut self) -> u32 {
        self.value += 1;
        self.value
    }
    fn value(&self) -> u32 {
        self.value
    }
    fn set_value(&mut self, n: u32) {
        self.value = n;
    }
}
/// Per-class isolate-slot marker holding the cached
/// FunctionTemplate. Exists so `Foo::install` is idempotent
/// per isolate — required for `#[v8_inherit]` to chain
/// derived classes onto the SAME template the global was
/// bound to (otherwise `instanceof` walks a different
/// [[FunctionPrototype]] and returns false).
#[doc(hidden)]
#[allow(non_camel_case_types)]
pub struct __InstallSlot_Foo(::v8::Global<::v8::FunctionTemplate>);
/// Per-class isolate-slot marker holding `Foo.prototype` for
/// WebIDL §3.7 brand checks. Captured eagerly during `install`
/// (after `get_function`) and consulted by every method,
/// getter, and setter callback before the unsafe internal-field
/// deref.
///
/// Without this, the only "brand check" in the prologue is "is
/// internal field 0 an External" — which any `#[v8_class]`
/// instance with one internal field passes, allowing
/// `Headers.prototype.append.call(blob)` to reinterpret the
/// Blob's box as a Headers and write Vec<u8> internals into
/// arbitrary memory (UB).
#[doc(hidden)]
#[allow(non_camel_case_types)]
pub struct __BrandSlot_Foo(::v8::Global<::v8::Object>);
/// Brand-check helper: walks the prototype chain of `this`
/// looking for the cached `Foo.prototype`. Returns true on
/// match (the receiver IS a Foo, or a subclass via
/// `#[v8_inherit]`), false otherwise.
///
/// Walks at most 1024 prototype links — matching V8's own
/// internal `Object::PrototypeChainLength` sanity bound. The
/// cap is NOT a cycle defence: ECMAScript §10.4.7.2 step 8
/// already requires `Object.setPrototypeOf` to reject any
/// assignment that would create a cycle, so user JS cannot
/// construct one. The cap exists purely as a defence-in-depth
/// belt-and-braces against an underlying V8 bug or future
/// proxy-driven prototype chain that fakes infinite linear
/// depth. Real WebIDL inheritance chains are 1-3 hops; pure
/// prototypal chains rarely exceed 5; reaching the cap is a
/// pathological case for which "false" is the conservative
/// answer.
///
/// The cost is dwarfed by the ~100ns V8 callback overhead —
/// the brand check itself is O(depth) Local pointer
/// comparisons.
///
/// The cached prototype is populated lazily on first call —
/// NOT in `install` — because eager `get_function(scope)` at
/// install time would freeze the FunctionTemplate's instance
/// shape and silently no-op any subsequent
/// `prototype_template().set_accessor_property(...)` calls.
/// Several classes (URL.searchParams, etc.) install accessors
/// on the prototype_template AFTER `Self::install` returns; we
/// must not break those.
///
/// First-call cost (one-time per isolate): one `get_function`
/// + one `.get(prototype)`. Steady state: an isolate-slot read
/// (Rc-clone-shaped) plus the chain walk.
///
/// Lifetimes are elided here on purpose. An explicit `<'s>`
/// would tie the `Local<Object>` argument's lifetime to the
/// `&mut PinScope` lifetime in an invariant way (mutable
/// references are invariant over their type param), which
/// then conflicts with `args.this()`'s callsite-derived
/// lifetime. Elision lets each Local pick its own appropriate
/// (and shorter) lifetime — the helper body never returns a
/// `Local` so there's no need to relate them outside the
/// function.
#[doc(hidden)]
#[allow(non_snake_case, dead_code)]
fn __brand_check_Foo(scope: &mut v8::PinScope, obj: v8::Local<v8::Object>) -> bool {
    let cached_global: v8::Global<v8::Object> = if let Some(slot) = scope
        .get_slot::<__BrandSlot_Foo>()
    {
        slot.0.clone()
    } else {
        let tmpl_global = match scope.get_slot::<__InstallSlot_Foo>() {
            Some(s) => s.0.clone(),
            None => return false,
        };
        let tmpl_local = v8::Local::new(scope, &tmpl_global);
        let func = match tmpl_local.get_function(scope) {
            Some(f) => f,
            None => return false,
        };
        let proto_key = match v8::String::new(scope, "prototype") {
            Some(s) => s,
            None => return false,
        };
        let proto_v = match func.get(scope, proto_key.into()) {
            Some(v) => v,
            None => return false,
        };
        let proto: v8::Local<v8::Object> = match proto_v.try_into() {
            Ok(o) => o,
            Err(_) => return false,
        };
        let g = v8::Global::new(scope, proto);
        let g_clone = g.clone();
        scope.set_slot(__BrandSlot_Foo(g));
        g_clone
    };
    let expected_proto: v8::Local<v8::Object> = v8::Local::new(scope, &cached_global);
    let mut current: v8::Local<v8::Value> = match obj.get_prototype(scope) {
        Some(v) => v,
        None => return false,
    };
    for _ in 0..1024 {
        if current.is_null_or_undefined() {
            return false;
        }
        let cur_obj: v8::Local<v8::Object> = match current.try_into() {
            Ok(o) => o,
            Err(_) => return false,
        };
        if cur_obj == expected_proto {
            return true;
        }
        current = match cur_obj.get_prototype(scope) {
            Some(v) => v,
            None => return false,
        };
    }
    false
}
/// Public brand check: is `v` an instance of this class (or a
/// subclass via `#[v8_inherit]`) in the current isolate?
///
/// **Deprecated**: prefer the typed `<Class>::is_instance`
/// method emitted alongside this fn (Wave 5c, design §3.5).
/// This symbol stays for back-compat with pre-Wave-5c callers;
/// scheduled for removal in Wave 8 per the macro's
/// `STABILITY.md`.
///
/// Non-Object values (primitives, null, undefined) return
/// `false` — the underlying `__brand_check_<Class>` requires
/// `Local<Object>`, so this wrapper does the
/// `Local::<Object>::try_from` gate for the caller. Spec
/// alignment: WebIDL §3.7 brand identity treats only objects
/// as candidates.
///
/// Returns `false` if the class hasn't been installed in the
/// current isolate (the install slot is empty), matching
/// `__brand_check_<Class>`'s behaviour.
#[doc(hidden)]
#[allow(non_snake_case, dead_code)]
pub fn __zs_is_Foo(scope: &mut v8::PinScope, v: v8::Local<v8::Value>) -> bool {
    let obj: v8::Local<v8::Object> = match v.try_into() {
        Ok(o) => o,
        Err(_) => return false,
    };
    __brand_check_Foo(scope, obj)
}
#[allow(non_snake_case, dead_code)]
impl Foo {
    /// Brand-check: returns `true` iff `value` is an instance
    /// of this class (or a subclass via `#[v8_inherit]`) in
    /// the current isolate.
    ///
    /// Non-Object values (primitives, null, undefined) return
    /// `false`, as does an isolate where the class hasn't been
    /// installed. Spec alignment: WebIDL §3.7 brand identity.
    ///
    /// This is the stable entry point introduced in Wave 5c
    /// (design `docs/proposals/runtime-macros-refactor.md` §3.5).
    /// Prefer this over the legacy `__zs_is_<Class>` symbol —
    /// the latter is deprecated and scheduled for removal in
    /// Wave 8.
    pub fn is_instance(scope: &mut v8::PinScope, value: v8::Local<v8::Value>) -> bool {
        __zs_is_Foo(scope, value)
    }
}
#[allow(non_snake_case)]
impl ::zeroship_runtime::macro_runtime::__private::Sealed for Foo {}
#[allow(non_snake_case)]
impl ::zeroship_runtime::macro_runtime::V8ClassInstance for Foo {
    fn is_instance(scope: &mut ::v8::PinScope, value: ::v8::Local<::v8::Value>) -> bool {
        <Self>::is_instance(scope, value)
    }
}
#[allow(non_snake_case, dead_code)]
impl Foo {
    /// Install this class on the given V8 scope, returning the
    /// FunctionTemplate. The runtime calls this from
    /// `setup_globals` and uses the returned template to attach
    /// the class as a global (e.g. `globalThis.Headers`).
    ///
    /// Idempotent per isolate: subsequent calls return the same
    /// FunctionTemplate (looked up via an isolate slot keyed by
    /// the per-class `__InstallSlot_<Class>` marker type emitted
    /// by `#[v8_class]` at module scope). This is what makes
    /// `#[v8_inherit]` work — derived classes resolve the parent's
    /// template by calling the parent's install, which returns
    /// the cached template on the second call (the first call
    /// typically being the runtime's own register-as-global step).
    pub fn install<'s>(
        scope: &mut v8::PinScope<'s, '_>,
    ) -> v8::Local<'s, v8::FunctionTemplate> {
        if let Some(cached) = scope.get_slot::<__InstallSlot_Foo>() {
            return v8::Local::new(scope, cached.0.clone());
        }
        let __ctor_tmpl = v8::FunctionTemplate::new(scope, __Foo_constructor_callback);
        let __class_name = v8::String::new(scope, "Foo").unwrap();
        __ctor_tmpl.set_class_name(__class_name);
        __ctor_tmpl.instance_template(scope).set_internal_field_count(1usize);
        let __proto = __ctor_tmpl.prototype_template(scope);
        {
            let __key = v8::String::new(scope, "touch").unwrap();
            let __fn_tmpl = v8::FunctionTemplate::new(scope, __Foo_touch_callback);
            __proto.set(__key.into(), __fn_tmpl.into());
        }
        {
            let __key = v8::String::new(scope, "value").unwrap();
            let __getter_tmpl = v8::FunctionTemplate::new(scope, __Foo_value_callback);
            let __getter_arg: Option<v8::Local<v8::FunctionTemplate>> = Some(
                __getter_tmpl,
            );
            let __setter_tmpl = v8::FunctionTemplate::new(
                scope,
                __Foo_set_value_callback,
            );
            let __setter_arg: Option<v8::Local<v8::FunctionTemplate>> = Some(
                __setter_tmpl,
            );
            __proto
                .set_accessor_property(
                    __key.into(),
                    __getter_arg,
                    __setter_arg,
                    v8::PropertyAttribute::NONE,
                );
        }
        {
            let __tag_sym = v8::Symbol::get_to_string_tag(scope);
            let __tag_value = v8::String::new(scope, "Foo").unwrap();
            __proto
                .set_with_attr(
                    __tag_sym.into(),
                    __tag_value.into(),
                    v8::PropertyAttribute::READ_ONLY | v8::PropertyAttribute::DONT_ENUM,
                );
        }
        let __global = ::v8::Global::new(scope, __ctor_tmpl);
        let __local = ::v8::Local::new(scope, __global.clone());
        scope.set_slot(__InstallSlot_Foo(__global));
        __local
    }
}
#[allow(non_snake_case, unused_variables, unused_mut, clippy::needless_borrow)]
pub(crate) fn __Foo_constructor_callback(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    _rv: v8::ReturnValue,
) {
    if !args.is_construct_call() {
        let __msg = v8::String::new(
                scope,
                "Failed to construct 'Foo': Please use the 'new' operator, this DOM object constructor cannot be called as a function.",
            )
            .unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __this = args.this();
    let start: u32 = args.get(0i32).uint32_value(scope).unwrap_or(0);
    let __instance: Foo = <Foo>::new(start);
    let __boxed = Box::new(__instance);
    let __raw_ptr = Box::into_raw(__boxed);
    let __raw_addr = __raw_ptr as usize;
    let __ext = v8::External::new(scope, __raw_ptr as *mut ::std::ffi::c_void);
    __this.set_internal_field(0, __ext.into());
    let __weak = v8::Weak::with_guaranteed_finalizer(
        scope,
        __this,
        Box::new(move || {
            unsafe {
                drop(Box::from_raw(__raw_addr as *mut Foo));
            }
        }),
    );
    ::std::mem::forget(__weak);
}
#[allow(non_snake_case, unused_variables, unused_mut, clippy::needless_borrow)]
pub(crate) fn __Foo_touch_callback(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    mut rv: v8::ReturnValue,
) {
    let __this = args.this();
    if !__brand_check_Foo(scope, __this) {
        let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __ext = match __this
        .get_internal_field(scope, 0)
        .and_then(|v| v8::Local::<v8::External>::try_from(v).ok())
    {
        Some(e) => e,
        None => {
            let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __inflight_addr = __ext.value() as usize;
    ::std::thread_local! {
        static __INFLIGHT : ::std::cell::RefCell < ::std::collections::HashSet < usize >>
        = ::std::cell::RefCell::new(::std::collections::HashSet::new());
    }
    let __already_inflight = __INFLIGHT
        .with(|__s| !__s.borrow_mut().insert(__inflight_addr));
    if __already_inflight {
        let __msg = v8::String::new(
                scope,
                "re-entered method `Foo::touch` on instance — concurrent &mut self callback",
            )
            .unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    struct __ReentryGuard(usize);
    impl ::std::ops::Drop for __ReentryGuard {
        fn drop(&mut self) {
            __INFLIGHT
                .with(|__s| {
                    __s.borrow_mut().remove(&self.0);
                });
        }
    }
    let __reentry_guard = __ReentryGuard(__inflight_addr);
    let __instance = unsafe { &mut *(__ext.value() as *mut Foo) };
    let __r = <Foo>::touch(&mut *__instance);
    rv.set(v8::Integer::new_from_unsigned(scope, __r).into());
}
#[allow(non_snake_case, unused_variables, unused_mut, clippy::needless_borrow)]
pub(crate) fn __Foo_value_callback(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    mut rv: v8::ReturnValue,
) {
    let __this = args.this();
    if !__brand_check_Foo(scope, __this) {
        let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __ext = match __this
        .get_internal_field(scope, 0)
        .and_then(|v| v8::Local::<v8::External>::try_from(v).ok())
    {
        Some(e) => e,
        None => {
            let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __instance = unsafe { &mut *(__ext.value() as *mut Foo) };
    let __r = <Foo>::value(&*__instance);
    rv.set(v8::Integer::new_from_unsigned(scope, __r).into());
}
#[allow(non_snake_case, unused_variables, unused_mut, clippy::needless_borrow)]
pub(crate) fn __Foo_set_value_callback(
    scope: &mut v8::PinScope,
    args: v8::FunctionCallbackArguments,
    mut rv: v8::ReturnValue,
) {
    let __this = args.this();
    if !__brand_check_Foo(scope, __this) {
        let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    let __ext = match __this
        .get_internal_field(scope, 0)
        .and_then(|v| v8::Local::<v8::External>::try_from(v).ok())
    {
        Some(e) => e,
        None => {
            let __msg = v8::String::new(scope, "Illegal invocation").unwrap();
            let __exc = v8::Exception::type_error(scope, __msg);
            scope.throw_exception(__exc);
            return;
        }
    };
    let __inflight_addr = __ext.value() as usize;
    ::std::thread_local! {
        static __INFLIGHT : ::std::cell::RefCell < ::std::collections::HashSet < usize >>
        = ::std::cell::RefCell::new(::std::collections::HashSet::new());
    }
    let __already_inflight = __INFLIGHT
        .with(|__s| !__s.borrow_mut().insert(__inflight_addr));
    if __already_inflight {
        let __msg = v8::String::new(
                scope,
                "re-entered method `Foo::set_value` on instance — concurrent &mut self callback",
            )
            .unwrap();
        let __exc = v8::Exception::type_error(scope, __msg);
        scope.throw_exception(__exc);
        return;
    }
    struct __ReentryGuard(usize);
    impl ::std::ops::Drop for __ReentryGuard {
        fn drop(&mut self) {
            __INFLIGHT
                .with(|__s| {
                    __s.borrow_mut().remove(&self.0);
                });
        }
    }
    let __reentry_guard = __ReentryGuard(__inflight_addr);
    let __instance = unsafe { &mut *(__ext.value() as *mut Foo) };
    let n: u32 = args.get(0i32).uint32_value(scope).unwrap_or(0);
    <Foo>::set_value(&mut *__instance, n);
}
